# music-genre-classification

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  openapi.json  pyproject.toml
data/: lgb_tuning_results_20210821.csv
env/: api-service-template.env  api-service.env  postgres-template.env  postgres.env
model/deployment/: label2id.json
model/deployment/fold_0/: lgb.txt  tfidf.vec
model/deployment/fold_1/: lgb.txt  tfidf.vec
model/deployment/fold_2/: lgb.txt  tfidf.vec
model/deployment/fold_3/: lgb.txt  tfidf.vec
notebook/: optuna_finetuning_lightgbm.ipynb
sql/: music_genre_tab.sql
src/: config.py  db.py  db_utils.py  errors.py  main.py  utils.py
src/classifier/: constants.py  predict.py  preprocess.py  router.py
src/classifier/schema/: data.py  predict_batch.py  response.json  response.py
src/genre/: __init__.py  router.py
src/genre/schema/: genre_list.py  input_data.py  title_list.py
src/genre/schema/response_json/: genre_list.json  title_list.json
src/healthcheck/: router.py
tests/: __init__.py  test_classifier.py  test_genre.py  test_healthcheck.py
tests/test_files/: test_bad_missing_col.csv  test_bad_wrong_cell_type.csv
