[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Chew Ze Yong <gavinchew92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
ipykernel = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
