[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Chew Ze Yong <gavinchew92@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
pandas = "^1.3.2"
scikit-learn = "^0.24.2"
nltk = "^3.6.2"
Unidecode = "^1.2.0"
tqdm = "^4.62.1"
lightgbm = "^3.2.1"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.23"
python-dotenv = "^0.19.0"
psycopg2-binary = "^2.9.1"
pandera = "^0.7.0"
python-multipart = "^0.0.5"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
ipykernel = "^6.2.0"
torch = "^1.9.0"
transformers = "^4.9.2"
wordcloud = "^1.8.1"
ipywidgets = "^7.6.3"
numba = "^0.53.1"
optuna = "^2.9.1"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
umap-learn = "^0.5.1"
datamodel-code-generator = "^0.11.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

